[package]
name = "hexil-window"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.93"
log = { version = "0.4.22", features = ["kv", "kv_serde"] }
raw-window-handle = "0.6.2"
serde = { version = "1.0.215", features = ["derive"] }
smithay-client-toolkit = "0.19.2"
wayland-backend = { version = "0.3.7", features = ["client_system", "rwh_06", "log"] }

[lints]
workspace = true
