[package]
name = "hexil"
version.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
winit = "0.30.5"
hexil-render = {path = "../hexil-render"}
smithay-client-toolkit = "0.19.2"
raw-window-handle = "0.6.2"
